Refatorando estrutura do projeto
- Adicionado 'python-decouple' para separar a configuração do código
- Adicionado Makefile para facilitar comandos
- Adicionado example.settings.ini como guia para criação do settings.ini
- Adicionadas novas linhas no .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,11 @@ target/
 *.log
 **/migrations/**
 !**/migrations/__init__.py
+staticfiles/
+
+# SQLite
+*.sqlite3
+
+# Decouple
+settings.ini
+!example.settings.ini
