--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-scrapy
-scrapy-djangoitem
-scrapyd
-ipdb
-ipython
-celery
-django
-django-celery
-djangorestframework
+scrapy==1.0.3
+scrapy-djangoitem==1.0.0
+scrapyd==1.1.0
+ipdb==0.8.1
+ipython==4.0.0
+celery==3.1.18
+django==1.8.5
+django-celery==3.1.16
+djangorestframework==3.2.4
+python-decouple==3.0
+Unipath==1.1
+dj-database-url==0.3.0
