Configurando celery, djcelery & redis
- Configuração de tarefas assíncronas e periódicas
- Renomeando diretórios principais

--- a/example.settings.ini
+++ b/example.settings.ini
@@ -1,6 +1,10 @@
 [settings]
-SECRET_KEY=SECRETKEYSTRINGHERE
+
+# DJANGO SETTINGS
+
+SECRET_KEY=RANDOMSECRETKEYHERE
 DEBUG=BOOLEAN
+ADMIN_URL=admin
 
 # STATICs -> Comment with # to use default static dirs
 STATIC_URL=OPTIONALPATH
@@ -8,4 +12,14 @@ STATIC_ROOT=OPTIONALPATH
 STATICFILES_DIRS=OPTIONALPATH
 
 # DATABASE_URL -> Comment with # to use SQLite3
+# DATABASE_URL -> Example: postgres://user:password@localhost:5432/database_name
 DATABASE_URL=postgres://pg_user:pg_pass@pg_host:pg_port/pg_db
+
+# SCRAPY SETTINGS
+
+DJANGO_SETTINGS_MODULE=SETTINGSMODULE
+
+# CELERY & REDIS SETTINGS
+
+BROKER_URL=redis://localhost:6379
+CELERY_RESULT_BACKEND=redis://localhost:6379
