--- a/scrapy/scrapy.cfg
+++ b/scrapy/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = raincife_bot.settings
+default = scrapy.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = raincife_bot
+project = scrapy
