--- a/.gitignore
+++ b/.gitignore
@@ -47,9 +47,6 @@ coverage.xml
 *.mo
 *.pot
 
-# Django stuff:
-*.log
-
 # Sphinx documentation
 docs/_build/
 
@@ -75,3 +72,6 @@ settings.ini
 
 # Redis
 *dump*
+
+# Vagrant
+.vagrant
