--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-scrapy==1.0.3
-scrapy-djangoitem==1.0.0
-scrapyd==1.1.0
 ipdb==0.8.1
 ipython==4.0.0
 celery==3.1.18
@@ -12,3 +9,5 @@ Unipath==1.1
 dj-database-url==0.3.0
 redis==2.10.3
 psycopg2==2.6.1
+scrapy-djangoitem==1.0.0
+supervisor==3.1.3
