--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ pip==7.1.2
 python-decouple==3.0
 -e git+https://github.com/victorfsf/jsonado.git@develop#egg=jsonado
 LEPL==5.1.3
+tornado-cors==0.6.0
